updated gitignore, refactored elements, added video thing

--- a/yew-app/index.html
+++ b/yew-app/index.html
@@ -1,3 +1,4 @@
+<!-- This file is just a generic source files before app gets built. It is not meant to be modified really. -->
 <!DOCTYPE html>
 <html lang="en">
     <head> </head>
